# Portfolio

./: .coderabbit.yaml  .cursorignore  .dockerignore  .example.env  .gitignore  .isort.cfg  .pre-commit-config.yaml  2025-07-09-this-session-is-being-continued-from-a-previous-co.txt  =1.34.0  =2.2.0  ACTUAL_FLOW_ANALYSIS.md  ADVANCED_OPTIMIZATIONS.md  AGENT_BASED_RECEIPT_LABELING.md  AGENT_PROJECT_STRUCTURE.md  AI_COST_TRACKING.md  AI_REVIEW_IMPLEMENTATION.md  AI_USAGE_SYNC_GUIDE.md  ASYNC_BUILD_TESTING.md  AWS_LAMBDA_SQS_NETWORKING_SUPPORT_TICKET.md  BACKFILL_EXECUTION_PLAN.md  CHARTER.md  CHROMADB_DOCKER_IMPLEMENTATION.md  CHROMA_DB_PLAN.md  CI_CD_IMPROVEMENTS.md  CLAUDE.md  CLOUD_COST_TRACKING_SOLUTION.md  CODERABBIT_TODO.md  CODEX.md  COMPACTION_LAMBDA_NETWORKING_FIX.md  COMPLETE_FLOW_DOCUMENTATION.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONTEXT.md  CORE_LABELS_COMPLETE_STATUS.md  COST_OPTIMIZATION_PLAN.md  COST_TRACKING.md  DEPLOYMENT_CHECKLIST.md  DUPLICATE_CODE_STRATEGY.md  DYNAMO_S3_ACCESS_SETUP.md  EFS_IMPLEMENTATION_PROGRESS.md  EMR_QA_STEP_FUNCTION_NOTE.md  (+323 more)
infra/: .dockerignore  API_DOCUMENTATION.md  API_GATEWAY_FIXES.md  CHROMADB_FARGATE_ARCHITECTURE.md  CHROMADB_LAMBDA_OPTIMIZATION.md  CHROMADB_OPTIMIZATION_COMPLETE.md  CHROMADB_USAGE_REVIEW.md  CI_CD_OPTIMIZATION_PLAN.md  CONTEXT_OPTIMIZATION_SUMMARY.md  CONTEXT_SIZE_ANALYSIS.md  DEPENDENCY_UPDATE_REQUIRED.md  DOCKER_BUILD_MIGRATION.md  DOCKER_CACHING_QUICKSTART.md  DOCKER_CACHING_STRATEGY.md  DOCKER_CONTEXT_EXPLANATION.md  DOCKER_DEPENDENCY_FIX.md  ERROR_HANDLING_GUIDE.md  FIRST_BUILD_INSTRUCTIONS.md  IAM_FIXES.md  LAMBDA_LAYER_SIZE_ANALYSIS.md  LAYER_COMPARISON.md  LOCKING_BUSINESS_LOGIC.md  LOCKING_EFFICIENCY_REVIEW.md  MCP_AUTH.md  NATIVE_LAYER_SOLUTION.md  NOTIFICATION_SETUP.md  PR_IMPROVEMENTS_SUMMARY.md  Pulumi.README.md  Pulumi.dev.yaml  Pulumi.e2e.yaml  Pulumi.prod.yaml  Pulumi.test-layer-tnorlund-feat-remove-docker-containers.yaml  Pulumi.test-layer.yaml  Pulumi.test.yaml  Pulumi.yaml  README.md  README_CHROMADB_METRICS.md  README_LAYER_UPDATE.md  SIMPLE_LAYER_GUIDE.md  TEST_FAST_LAMBDA_LAYER.md  (+77 more)
infra/base_images/: AGENT_BASE_IMAGE.md  ASYNC_BUILDS_EXPLAINED.md  ASYNC_DEPENDENCY_PROPAGATION.md  BASE_IMAGES_EVOLUTION.md  README.md  USAGE_GUIDE.md  __init__.py  base_images.py  base_images_codebuild.py  base_images_v2.py  base_images_v3.py  create_build_context.py  dockerfile_generator.py  enhanced_base_images.py
infra/batch_validate_labels_cove/: README.md  __init__.py  base.py  infrastructure.py
infra/chroma/: base.py  nat_egress.py  orchestrator.py  service.py  workers.py
infra/chromadb_compaction/: .dockerignore  CHANGES_SUMMARY.md  Dockerfile  EFS_LAMBDA_SETUP_COMPLETE.md  FINAL_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LAMBDA_CLEANUP_SUMMARY.md  MIGRATION_GUIDE.md  PARAMETER_FIX_SUMMARY.md  QUEUE_CONSUMER_CONFLICT.md  QUEUE_STRATEGY.md  README.md  README_stream_processor.md  S3_TESTING_GUIDE.md  TECHNICAL_DESIGN.md  __init__.py  enhanced_compaction_handler.py  enhanced_compaction_infra.py  example_usage.py  get_chromadb_metrics.sh  infrastructure.py  s3_buckets.py  sqs_queues.py  stream_processor.py  stream_processor_infra.py  (+4 more)
receipt_agent/: CHANGELOG.md  LINE_LENGTH_BATCH_PLAN.md  MIGRATION_STATUS.md  README.md  REFACTOR_SUMMARY.md  pyproject.toml
receipt_dynamo/: .dockerignore  .gitignore  ALTERNATIVE_STRATEGY.md  BATCH2_PROGRESS.md  CODE_DEDUPLICATION_ROADMAP.md  DUPLICATE_CODE_ANALYSIS.md  EXCEPTION_CONSISTENCY_TRACKER.md  MIGRATION_FINDINGS.md  MIXIN_CONSOLIDATION_GUIDE.md  NOISE_WORD_IMPLEMENTATION.md  PHASE2_BATCH1_PROGRESS.md  PYLINT_IMPROVEMENTS_SUMMARY.md  PYLINT_IMPROVEMENT_PLAN.md  PYLINT_LINE_LENGTH_PROMPTS.md  PYLINT_STRATEGY.md  README.md  TEST_PARAMETERIZATION_GUIDE.md  add_missing_decorators.py  analyze_exceptions.py  analyze_failures.py  analyze_mixin_consolidation.py  conftest.py  data_module_comparison.md  example_migration_receipt.py  fix_all_precommit_issues.py  fix_all_syntax_errors.py  fix_exceptions.py  fix_exceptions_single.py  fix_final_issues.py  fix_limit_validation.py  fix_precommit_errors.py  fix_protected_access.py  fix_receipt_line_final.py  fix_receipt_line_pylint.py  fix_remaining_issues.py  fix_remaining_pylint.py  fix_simple_errors.py  fix_test_failures.py  fix_test_receipt_pylint.py  import_check.py  (+16 more)
receipt_dynamo_stream/: README.md  pyproject.toml
receipt_label/: .coveragerc  .dockerignore  .gitignore  CHROMADB_S3_COMPACTION_ARCHITECTURE.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CURRENCY_DETECTION_TEST_RESULTS.md  DECISION_ENGINE_PROMPT.md  EFFICIENT_LABELING_GUIDE.md  GSITYPE_OPTIMIZATION_STRATEGY.md  LABEL_UPDATING_GUIDE.md  LANGGRAPH_STRUCTURE.md  LICENSE  MCP_SERVER_IMPLEMENTATION_GUIDE.md  MCP_SERVER_SETUP.md  METADATA_IMPACT_SUMMARY.md  Makefile  NEGATIVE_SPACE_DETECTION.md  PHASE2_VALIDATION_RESULTS.md  PHASE3_COMPLETE.md  PHASE_2_ACCOMPLISHMENTS.md  PHASE_3_AUDIT_TRAIL_DESIGN.md  PHASE_3_CONTEXT_ENGINEERING.md  PHASE_3_CORE_LABELS_INTEGRATION.md  PHASE_3_DATA_CONSISTENCY.md  PHASE_3_DOCUMENTATION_SUMMARY.md  PHASE_3_EXTENDED_LABELING_WORKFLOW.md  PHASE_3_INITIAL_LABELING.md  PHASE_3_LAMBDA_ARCHITECTURE.md  PHASE_3_LANGGRAPH_DEVELOPMENT_STRATEGY.md  PHASE_3_MISSING_COMPONENTS.md  PHASE_3_MONITORING_STRATEGY.md  PHASE_3_PINECONE_WRAPPER.md  PHASE_3_PLAN.md  PHASE_3_STATE_SCHEMA_DESIGN.md  PHASE_3_TECHNICAL_SPEC.md  PHASE_3_WORKFLOW_ALIGNMENT.md  PHASE_3_WORKFLOW_V2_DOCUMENTATION.md  PINECONE_TO_CHROMA_MIGRATION.md  PR_DRAFT.md  (+79 more)
receipt_langsmith/: FINANCIAL_MATH_FINDINGS.md  README.md  pyproject.toml
receipt_layoutlm/: CONFUSION_MATRIX.md  EVALUATION.md  HYBRID_PIPELINE.md  HYPERPARAMS.md  METRICS.md  README.md  pyproject.toml  test_10_receipts.py  test_chroma_amounts.py  test_chroma_labeler.py  test_chroma_products.py  test_hybrid_pipeline.py
receipt_logo/: README.md  pyproject.toml
receipt_neo4j/: pyproject.toml
receipt_places/: README.md  health_check.py  monitoring.py  pyproject.toml  rollout_strategy.py
receipt_trainer/: README.md  TODO.md  pyproject.toml  requirements.txt  trainer.py
receipt_upload/: README.md  pyproject.toml
(+7595 files in other folders)
