[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt_agent"
version = "0.1.0"
description = "Agentic validation for receipt metadata using LangGraph and ChromaDB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Tyler Norlund" }
]
keywords = [
    "receipt",
    "validation",
    "agent",
    "langgraph",
    "chromadb",
    "langsmith",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Internal packages (transitive deps: boto3, requests, pydantic*, tenacity, structlog, chromadb, openai)
    "receipt-dynamo",              # DynamoDB client for receipts
    "receipt-chroma",              # ChromaDB client (brings chromadb, openai)
    "receipt-places",              # Google Places API (brings pydantic*, tenacity, structlog)
    # LangGraph/LangChain for agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langsmith>=0.1.0",
    # HTTP client for async operations
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/tnorlund/Portfolio"
Documentation = "https://github.com/tnorlund/Portfolio/tree/main/receipt_agent"
Repository = "https://github.com/tnorlund/Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["receipt_agent"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.isort]
known-first-party = ["receipt_agent", "receipt_dynamo", "receipt_chroma", "receipt_places"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["receipt_agent"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

