[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt-dynamo-stream"
version = "0.1.0"
description = "Lightweight DynamoDB stream parsing and change detection for receipt workflows"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Tyler Norlund", email="tnorlund@icloud.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.34.0",
    "receipt-dynamo>=0.3.0",
]
keywords = ["dynamodb", "receipts", "aws", "streams", "chroma"]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.1.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "moto>=5.1.0,<6.0.0",
]
dev = [
    "black==25.12.0",
    "pylint>=3.0.0,<5.0.0",
    "mypy>=1.16.1",
    "isort==6.0.1",
    "boto3-stubs[dynamodb]>=1.42.0",
    "mypy-boto3-dynamodbstreams>=1.42.0",
]

[tool.hatch.build]
exclude = [
  "tests/",
  "test/",
  "**/*.md",
  "**/*.txt",
  "**/*.json",
  "**/*.yaml",
  "**/*.yml",
  "**/*.ini",
  "**/*.cfg",
  "**/*.sh",
  "**/conftest.py",
  "**/pytest.ini",
  "run_tests.py",
  "**/__pycache__/",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.pyd",
  ".coverage",
  ".pytest_cache/",
]

[tool.hatch.build.targets.wheel]
packages = ["receipt_dynamo_stream"]
include = ["receipt_dynamo_stream/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["receipt_dynamo_stream"]
omit = ["tests/*"]
parallel = false
data_file = ".coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 79
target-version = ["py312"]
include = '\\.pyi?$'

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
disable = ["duplicate-code"]

[tool.pylint.main]
persistent = false

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["moto", "moto.*"]
ignore_missing_imports = true
