[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt-langsmith"
version = "0.2.0"
authors = [
  { name="Tyler Norlund", email="tnorlund@icloud.com" },
]
description = "LangSmith trace schemas, API client, and analytics for receipt evaluation"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "boto3>=1.34.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
# PySpark variant for EMR Serverless processing
pyspark = [
    "pyspark>=3.5.0",
    "pyarrow>=14.0.0",  # Required by parsers/parquet.py
]

# Full variant includes everything (pyspark for EMR)
full = [
    "receipt-langsmith[pyspark]",
]

# Development dependencies
dev = [
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "moto>=5.1.0",
    "black==25.12.0",
    "pylint>=3.0.0,<5.0.0",
    "mypy>=1.16.1",
    "isort==6.0.1",
]

[tool.hatch.build]
exclude = [
  "tests/",
  "**/*.md",
  "**/*.txt",
  "**/__pycache__/",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["receipt_langsmith"]
include = ["receipt_langsmith/py.typed"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
